--- a/app/src/main/res/layout/rv_item_layout_bc.xml
+++ b/app/src/main/res/layout/rv_item_layout_bc.xml
@@ -7,18 +7,21 @@
     card_view:cardElevation="3dp"
     card_view:cardUseCompatPadding="true">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="60dp"
+        android:layout_height="90dp"
+        android:scaleType="centerCrop"
+        android:id="@+id/iv_poster"
+        android:layout_marginLeft="10dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:padding="10dp"
-        android:layout_height="match_parent"
+        android:paddingLeft="90dp"
+        android:layout_height="90dp"
+        android:layout_toRightOf="@+id/iv_poster"
         android:gravity="center"
         android:orientation="vertical">
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="60dp"
-            android:layout_height="90dp"
-            android:scaleType="centerCrop"
-            android:id="@+id/iv_poster"
-            android:layout_marginLeft="10dp"/>
+
 
         <TextView
             android:layout_width="match_parent"
